<resources>
    <string name="app_name">SecretDMs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_friend">Para</string>
    <string name="name">Nombre</string>
    <string name="lifespan">Tiempo de vida</string>
    <string name="message">Mensaje</string>
    <string name="write_a_message">Escribe un mensaje</string>
    <string name="new_chat">Iniciar chat</string>
    <string name="defaultChannelName">SecretDMs default channel</string>
    <string name="notificationDescription">Notifications from SecretDMs</string>
    <string name="deepLinkNotificationTitle">Deep Link</string>
    <string name="newMessageReceived">Nuevo mensaje recibido</string>
    <string name="newMessageFrom">Nuevo mensaje de %1$s</string>
    <string name="home_destination_label">SecretDMs</string>
    <string name="done_btn">Listo</string>
    <string name="user_name">Nombre</string>
    <string name="create_chat">crear</string>
    <string name="must_indicate_a_name">Tenés que indicar un nombre</string>
    <string name="min_time_left_in_chat">%1$d s</string>
    <string name="login">Login</string>
    <string name="error_signing_in">Error de inicio de sesión</string>
    <string name="retry">Reintentar</string>
    <string name="username_checkout_title">Elegí un nombre de usuario para comenzar.</string>
    <string name="username_checkout_info">Tené en cuenta que:\n1. No podrás cambiarlo luego\n2. El nombre no puede coincidir con el de otro usuario.\n3. Tu nombre será la forma en que otros usuarios se conectarán con vos.</string>
    <string name="username">Nombre de usuario</string>
    <string name="verify">Verificar</string>
    <string name="done">Listo</string>
    <string name="username_title_info">Usuario:</string>
    <string name="connected_as_info">Conectado como:</string>
    <string name="logout">Cerrar sesión</string>
    <string name="info">Información</string>
    <string name="fragment_create_username_title">Crear usuario</string>
    <string name="must_create_a_username">Debes ingresar un usuario</string>
    <string name="error_checking_username">Ocurrió un error al verificar el usuario</string>
    <string name="username_min_chars_warning">Debe contener al menos 4 caracteres</string>
    <string name="username_validation_error">No se pudo validar el usuario</string>
    <string name="username_not_available">Usuario no disponible</string>
    <string name="error_fetching_data">Ocurrrió un error al buscar los datos</string>
    <string name="copied_to_clipboard">Copiado en el portapapeles</string>
    <string name="account_fragment_title">Cuenta</string>
    <string name="seconds">Segundos</string>
    <string name="minutes">Minutos</string>
    <string name="hours">Horas</string>
    <string name="days">Días</string>
    <string name="default_destruction_time">10 s</string>
    <string name="timer_options_title_expanded">Timer</string>
    <string name="timer_options_title_collapsed">Timer: %1$d %2$s</string>
    <string name="seconds_abbreviated">s</string>
    <string name="minutes_abbreviated">m</string>
    <string name="hours_abbreviated">h</string>
    <string name="days_abbreviated">d</string>
    <string name="current_slider_value_placeholder">%1$d%2$s</string>
    <string name="timer_wasnt_set">Sin timer</string>
    <string name="open_timer_options">Abrir opciones del timer</string>
    <string name="new_chat_dialog_title">Nuevo chat</string>
    <string name="received_timer_text">"%1$d%2$s"</string>
    <string name="sent_message_extra_info">" - %1$d%2$s"</string>
    <string name="new_message_received">Nuevo mensaje</string>
    <string name="message_has_no_timer">Sin timer establecido</string>
    <string name="you_got_n_time_to_read">Timer establecido en %1$d%2$s</string>
    <string name="select_all">Seleccionar todo</string>
    <string name="delete">Eliminar seleccionados</string>
    <string name="selected_amount">%1$d seleccionado(s)</string>
</resources>