<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!--<com.google.android.material.checkbox.MaterialCheckBox
        app:buttonTint="?attr/colorControlNormal"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        android:button="@drawable/switch_timer_options_visibility"
        android:buttonTint="?attr/colorControlNormal"
        android:checked="true"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/timer_options_title_expanded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <HorizontalScrollView
        android:id="@+id/horizontal_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_seconds"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/seconds"
                app:checkedIcon="@drawable/ic_done_24"
                app:checkedIconEnabled="true"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_minutes"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes"
                app:checkedIcon="@drawable/ic_done_24"
                app:checkedIconEnabled="true"
                 />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_hours"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                app:checkedIcon="@drawable/ic_done_24"
                app:checkedIconEnabled="true"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_days"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days"
                app:checkedIcon="@drawable/ic_done_24"
                app:checkedIconEnabled="true"
                 />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:value="10"
        android:valueFrom="0"
        android:valueTo="100"
        app:layout_constraintEnd_toStartOf="@id/card_view_slider_current_value"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontal_container" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_slider_current_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:padding="4dp"
        app:cardBackgroundColor="@color/grey_background"
        app:layout_constraintBottom_toBottomOf="@id/slider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/slider"
        app:layout_constraintTop_toTopOf="@id/slider">

        <TextView
            android:id="@+id/slider_current_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/default_destruction_time"
            android:textStyle="bold" />

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>