<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.ekosoftware.secretdms.ui.HomeFragment"
        android:label="@string/home_destination_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_messageFragment"
            app:destination="@id/messageFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_homeFragment_to_dialogNewChatDialogFragment"
            app:destination="@id/dialogNewChatDialogFragment" />
        <action
            android:id="@+id/action_homeFragment_to_createUsernameFragment"
            app:destination="@id/createUsernameFragment" />
    </fragment>
    <fragment
        android:id="@+id/messageFragment"
        android:name="com.ekosoftware.secretdms.ui.ChatFragment"
        android:label="{chat_id}"
        tools:layout="@layout/fragment_chat">
        <argument
            android:name="chat_id"
            app:argType="string" />
    </fragment>
    <dialog
        android:id="@+id/dialogNewChatDialogFragment"
        android:name="com.ekosoftware.secretdms.ui.NewChatDialogFragment"
        android:label="NewChatDialogFragment" >
        <action
            android:id="@+id/newChatDialog_to_chatFragment"
            app:destination="@id/messageFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:launchSingleTop="true"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/homeFragment" />
    </dialog>
    <fragment
        android:id="@+id/createUsernameFragment"
        android:name="com.ekosoftware.secretdms.ui.CreateUsernameFragment"
        android:label="@string/fragment_create_username_title"
        tools:layout="@layout/fragment_create_username" />
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.ekosoftware.secretdms.ui.AccountFragment"
        android:label="@string/account_fragment_title" />
    <action
        android:id="@+id/action_global_accountFragment"
        app:destination="@id/accountFragment"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right" />
    <action
        android:id="@+id/action_global_createUsernameFragment"
        app:destination="@id/createUsernameFragment"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_in_left"
        app:popExitAnim="@anim/slide_out_right" />
    <action
        android:id="@+id/action_global_homeFragment"
        app:destination="@id/homeFragment"
        app:enterAnim="@anim/slide_in_left"
        app:exitAnim="@anim/slide_out_right"
        app:popEnterAnim="@anim/slide_in_right"
        app:popExitAnim="@anim/slide_out_left" />
</navigation>